# wanderer

./: .gitignore  CMakeLists.txt  compile_commands.json
ext/: here.txt
lib/: udp_server.cc  udp_server.h
servers/: profile.cc
src/: fit_coords.cc  fit_defaults.cc  fit_defaults.h  fit_mesg_types.cc  fit_types.cc  sql.cc  sql.h
test_data/: 15999935311_ACTIVITY.fit  16062853826.fit
website/: deploy.bash  meadow.txt
website/src/: about.html  example_ultra.html  index.html  profiles.html  search.html  styles.css
